// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocTemplate should render a default component with nothing 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  />
  <div
    className="doc-card"
  />
</div>
`;

exports[`DocTemplate should render custom package badge when url and version props are set 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  >
    <div
      className="badge-container"
    >
      <a
        className="badge"
        href="https://engineering.cerner.com/terra-ui/components/terra-doc-template/doc-template/doc-template"
      >
        <span
          className="badge-name"
        >
          package
        </span>
        <span
          className="badge-version"
        >
          v2.15.0
        </span>
      </a>
    </div>
    <Markdown
      src="test-file-stub"
    />
    <a
      href="https://github.com/cerner/terra-core/tree/master/packages/terra-doc-template"
    >
      View component source code
    </a>
  </div>
  <h1
    className="examples-header"
  >
    Example
  </h1>
  <ExampleTemplate
    description="Describing the test"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="0"
    title="Test Example 1"
  />
  <div
    className="doc-card"
  >
    <PropsTable
      componentName="Test Component"
      key="1"
      propsResolution="default"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`DocTemplate should show custom props tables 1`] = `
<div
  class="doc-template"
>
  <div
    class="doc-card"
  />
  <div
    class="doc-card"
  />
  <div
    class="doc-card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Prop Name
          </th>
          <th>
            Type
          </th>
          <th>
            Is Required
          </th>
          <th>
            Default Value
          </th>
          <th>
            Description
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            text
          </td>
          <td>
            string
          </td>
          <td>
            optional
          </td>
          <td>
            null
          </td>
          <td>
            <p>
              A text string to be rendered in the component.
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DocTemplate should show multiple examples 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  />
  <h1
    className="examples-header"
  >
    Examples
  </h1>
  <ExampleTemplate
    description="Describing the test"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="0"
    title="Test Example 1"
  />
  <ExampleTemplate
    description="Describing the test mk. 2"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="1"
    title="Test Example 2"
  />
  <div
    className="doc-card"
  />
</div>
`;

exports[`DocTemplate should show multiple props tables 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  />
  <div
    className="doc-card"
  >
    <PropsTable
      componentName="Test Component"
      key="0"
      propsResolution="default"
      src="test-file-stub"
    />
    <PropsTable
      componentName="Test Component (Again)"
      key="1"
      propsResolution="default"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`DocTemplate should show one example 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  />
  <h1
    className="examples-header"
  >
    Example
  </h1>
  <ExampleTemplate
    description="Describing the test"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="0"
    title="Test Example 1"
  />
  <div
    className="doc-card"
  />
</div>
`;

exports[`DocTemplate should show one props table 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  />
  <div
    className="doc-card"
  >
    <PropsTable
      componentName="Test Component"
      key="0"
      propsResolution="default"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`DocTemplate should show props table with findAllComponentDefinitions prop resolution 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  />
  <div
    className="doc-card"
  >
    <PropsTable
      componentName="Test Component"
      key="0"
      propsResolution="findAllComponentDefinitions"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`DocTemplate should show the readme 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  >
    <Markdown
      src="test-file-stub"
    />
  </div>
  <div
    className="doc-card"
  />
</div>
`;

exports[`DocTemplate should show the version 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  >
    <a
      href="https://www.npmjs.org/package/terra-doc-template"
    >
      <img
        alt="NPM version"
        src="https://badgen.net/npm/v/terra-doc-template"
      />
    </a>
  </div>
  <div
    className="doc-card"
  />
</div>
`;

exports[`DocTemplate should show the version and readme 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  >
    <a
      href="https://www.npmjs.org/package/terra-doc-template"
    >
      <img
        alt="NPM version"
        src="https://badgen.net/npm/v/terra-doc-template"
      />
    </a>
    <Markdown
      src="test-file-stub"
    />
  </div>
  <div
    className="doc-card"
  />
</div>
`;

exports[`DocTemplate should show the version, readme, source link, examples, and props tables 1`] = `
<div
  className="doc-template"
>
  <div
    className="doc-card"
  >
    <a
      href="https://www.npmjs.org/package/terra-doc-template"
    >
      <img
        alt="NPM version"
        src="https://badgen.net/npm/v/terra-doc-template"
      />
    </a>
    <Markdown
      src="test-file-stub"
    />
    <a
      href="https://github.com/cerner/terra-core/tree/master/packages/terra-doc-template"
    >
      View component source code
    </a>
  </div>
  <h1
    className="examples-header"
  >
    Examples
  </h1>
  <ExampleTemplate
    description="Describing the test"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="0"
    title="Test Example 1"
  />
  <ExampleTemplate
    description="Describing the test mk. 2"
    example={<TestComponentExample />}
    exampleSrc="test-file-stub"
    key="1"
    title="Test Example 2"
  />
  <div
    className="doc-card"
  >
    <PropsTable
      componentName="Test Component"
      key="2"
      propsResolution="default"
      src="test-file-stub"
    />
    <PropsTable
      componentName="Test Component (Again)"
      key="3"
      propsResolution="default"
      src="test-file-stub"
    />
  </div>
</div>
`;
